force-app/main/default/objects/Contact/fields/Memoradum_Articles_of_Association__c.field-meta.xml
<CustomField>
    <fullName>Memoradum_Articles_of_Association__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Memoradum &amp; Articles of Association</label>
    <type>Checkbox</type>
</CustomField>