force-app/main/default/objects/Contact/fields/National_ID_Details__c.field-meta.xml
<CustomField>
    <fullName>National_ID_Details__c</fullName>
    <label>National ID Details</label>
    <length>100</length>
    <type>Text</type>
</CustomField>