force-app/main/default/objects/Contact/fields/National_Id_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>National_Id_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>National Id Uploaded</label>
    <type>Checkbox</type>
</CustomField>