force-app/main/default/objects/Contact/fields/National_Id_Verified__c.field-meta.xml
<CustomField>
    <fullName>National_Id_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>National Id Verified</label>
    <type>Checkbox</type>
</CustomField>