force-app/main/default/objects/Contact/fields/Non_residency_Letter__c.field-meta.xml
<CustomField>
    <fullName>Non_residency_Letter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non-residency Letter</label>
    <type>Checkbox</type>
</CustomField>