force-app/main/default/objects/Contact/fields/Non_residency_Letter_Details__c.field-meta.xml
<CustomField>
    <fullName>Non_residency_Letter_Details__c</fullName>
    <label>Non-residency Letter Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>