force-app/main/default/objects/Contact/fields/Non_Residency_Letter_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Non_Residency_Letter_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non Residency Letter Uploaded</label>
    <type>Checkbox</type>
</CustomField>