force-app/main/default/objects/Contact/fields/Other_Documents_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Other_Documents_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Other Documents Uploaded</label>
    <type>Checkbox</type>
</CustomField>