force-app/main/default/objects/Contact/fields/Others_Details__c.field-meta.xml
<CustomField>
    <fullName>Others_Details__c</fullName>
    <label>Others Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>