force-app/main/default/objects/Contact/fields/Others_Valid_Upto__c.field-meta.xml
<CustomField>
    <fullName>Others_Valid_Upto__c</fullName>
    <label>Others Valid Upto</label>
    <type>Date</type>
</CustomField>