force-app/main/default/objects/Contact/fields/Passport_Copy_Details_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Passport_Copy_Details_Arabic__c</fullName>
    <label>Passport Copy Details_Arabic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>