force-app/main/default/objects/Contact/fields/Passport_Copy_Of_Attorney_Verified__c.field-meta.xml
<CustomField>
    <fullName>Passport_Copy_Of_Attorney_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Passport Copy Of Attorney Verified</label>
    <type>Checkbox</type>
</CustomField>