force-app/main/default/objects/Contact/fields/Passport_Copy_of_Authorized_Signatory__c.field-meta.xml
<CustomField>
    <fullName>Passport_Copy_of_Authorized_Signatory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Passport Copy of Authorized Signatory</label>
    <type>Checkbox</type>
</CustomField>