force-app/main/default/objects/Contact/fields/Passport_Copy_Valid_Upto_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Passport_Copy_Valid_Upto_Arabic__c</fullName>
    <label>Passport Copy Valid Upto_Arabic</label>
    <type>Date</type>
</CustomField>