force-app/main/default/objects/Contact/fields/Passport_Nationality__c.field-meta.xml
<CustomField>
    <fullName>Passport_Nationality__c</fullName>
    <label>Passport Nationality</label>
    <length>25</length>
    <type>Text</type>
</CustomField>