force-app/main/default/objects/Contact/fields/Passport_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Passport_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Passport Uploaded</label>
    <type>Checkbox</type>
</CustomField>