force-app/main/default/objects/Contact/fields/POA_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>POA_Contact_Number__c</fullName>
    <label>POA Contact Number</label>
    <type>Phone</type>
</CustomField>