force-app/main/default/objects/Contact/fields/Power_of_Attorney_Details__c.field-meta.xml
<CustomField>
    <fullName>Power_of_Attorney_Details__c</fullName>
    <label>Power of Attorney Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>