force-app/main/default/objects/Contact/fields/Power_of_Attorney_Details_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Power_of_Attorney_Details_Arabic__c</fullName>
    <label>Power of Attorney Details_Arabic</label>
    <length>250</length>
    <type>Text</type>
</CustomField>