force-app/main/default/objects/Contact/fields/Power_Of_Attorney_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Power_Of_Attorney_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Power Of Attorney Uploaded</label>
    <type>Checkbox</type>
</CustomField>