force-app/main/default/objects/Contact/fields/Power_Of_Attorney_Verified__c.field-meta.xml
<CustomField>
    <fullName>Power_Of_Attorney_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Power Of Attorney Verified</label>
    <type>Checkbox</type>
</CustomField>