force-app/main/default/objects/Contact/fields/Preferred_address_for_all_correspondence__c.field-meta.xml
<CustomField>
    <fullName>Preferred_address_for_all_correspondence__c</fullName>
    <label>Preferred address for all correspondence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Permanent</fullName>
            </value>
            <value>
                <fullName>Mailing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>