force-app/main/default/objects/Contact/fields/PropStrength__Age__c.field-meta.xml
<CustomField>
    <fullName>PropStrength__Age__c</fullName>
    <inlineHelpText>Age of the applicant</inlineHelpText>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>