force-app/main/default/objects/Contact/fields/PropStrength__Applied_For_Loan__c.field-meta.xml
<CustomField>
    <fullName>PropStrength__Applied_For_Loan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Applied For Loan</label>
    <type>Checkbox</type>
</CustomField>