force-app/main/default/objects/Contact/fields/PropStrength__Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>PropStrength__Contact_Name__c</fullName>
    <description>This field will be used for Reporting purposes to display the complete Name of the Contact using the Salutation, First name and Last Name based on Empty fields</description>
    <formula>IF 
( 
TEXT(Salutation) != &quot;&quot;, (TEXT(Salutation) + &quot; &quot;), &quot;&quot; 
) + 
IF 
( 
FirstName != &quot;&quot;, (FirstName + &quot; &quot;), &quot;&quot; 
) + 
LastName</formula>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>