force-app/main/default/objects/Contact/fields/PropStrength__Customer_Classification__c.field-meta.xml
<CustomField>
    <fullName>PropStrength__Customer_Classification__c</fullName>
    <label>Customer Classification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>VIP</fullName>
            </value>
            <value>
                <fullName>Collaborator</fullName>
            </value>
            <value>
                <fullName>Self Owned</fullName>
            </value>
            <value>
                <fullName>EWS</fullName>
            </value>
            <value>
                <fullName>General</fullName>
                <default>true</default>
                <label>General</label>
            </value>
            <value>
                <fullName>NRI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>