force-app/main/default/objects/Contact/fields/PropStrength__Customer_Code__c.field-meta.xml
<CustomField>
    <fullName>PropStrength__Customer_Code__c</fullName>
    <description>**** Format when type will be Auto Number ------&gt; Cust # {YY}-{00000000}</description>
    <externalId>true</externalId>
    <label>Customer Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>