force-app/main/default/objects/Contact/fields/PropStrength__Email_Id__c.field-meta.xml
<CustomField>
    <fullName>PropStrength__Email_Id__c</fullName>
    <label>Email Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>