force-app/main/default/objects/Contact/fields/PropStrength__Income_Tax_permanent_Account_No__c.field-meta.xml
<CustomField>
    <fullName>PropStrength__Income_Tax_permanent_Account_No__c</fullName>
    <inlineHelpText>Please enter the Permanent Income Tax No. provided by the Income Tax Department</inlineHelpText>
    <label>PAN</label>
    <length>50</length>
    <type>Text</type>
</CustomField>