force-app/main/default/objects/Contact/fields/PropStrength__Legal_Case_Pending__c.field-meta.xml
<CustomField>
    <fullName>PropStrength__Legal_Case_Pending__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Legal Case Pending</label>
    <type>Checkbox</type>
</CustomField>