force-app/main/default/objects/Contact/fields/PropStrength__Mobile_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>PropStrength__Mobile_Phone_Number__c</fullName>
    <label>Mobile Phone Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>