force-app/main/default/objects/Contact/fields/PropStrength__Nationality__c.field-meta.xml
<CustomField>
    <fullName>PropStrength__Nationality__c</fullName>
    <label>Nationality</label>
    <length>50</length>
    <type>Text</type>
</CustomField>