force-app/main/default/objects/Contact/fields/PropStrength__Non_Resident__c.field-meta.xml
<CustomField>
    <fullName>PropStrength__Non_Resident__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non- Resident</label>
    <type>Checkbox</type>
</CustomField>