force-app/main/default/objects/Contact/fields/PropStrength__Offer_Created__c.field-meta.xml
<CustomField>
    <fullName>PropStrength__Offer_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Offer Created</label>
    <type>Checkbox</type>
</CustomField>