force-app/main/default/objects/Contact/fields/PropStrength__Profession__c.field-meta.xml
<CustomField>
    <fullName>PropStrength__Profession__c</fullName>
    <inlineHelpText>What profession is the  contact in</inlineHelpText>
    <label>Profession</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Salaried</fullName>
            </value>
            <value>
                <fullName>Self Employed</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
            <value>
                <fullName>Self Employed Professional</fullName>
            </value>
            <value>
                <fullName>Housewife</fullName>
            </value>
            <value>
                <fullName>Politician</fullName>
            </value>
            <value>
                <fullName>Student</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>