force-app/main/default/objects/Contact/fields/PropStrength__Residence_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>PropStrength__Residence_Phone_Number__c</fullName>
    <label>Residence Phone Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>