force-app/main/default/objects/Contact/fields/PropStrength__Resident_Status__c.field-meta.xml
<CustomField>
    <fullName>PropStrength__Resident_Status__c</fullName>
    <label>Residential Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Resident Citizen</fullName>
                <default>true</default>
                <label>Resident Citizen</label>
            </value>
            <value>
                <fullName>Non Resident Citizen</fullName>
            </value>
            <value>
                <fullName>Foreigner</fullName>
            </value>
            <value>
                <fullName>Companies incorporated in permitted jurisdictions</fullName>
            </value>
            <value>
                <fullName>UAE Resident</fullName>
            </value>
            <value>
                <fullName>Non-UAE Resident</fullName>
            </value>
            <value>
                <fullName>Companies incorporated in the UAE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>