force-app/main/default/objects/Contact/fields/PropStrength__Total_Booking__c.field-meta.xml
<CustomField>
    <fullName>PropStrength__Total_Booking__c</fullName>
    <label>Total Bookings</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>