force-app/main/default/objects/Contact/fields/PropStrength__Total_Enquiries_Converted_To_Offer__c.field-meta.xml
<CustomField>
    <fullName>PropStrength__Total_Enquiries_Converted_To_Offer__c</fullName>
    <label>Total Enquiries Converted To Offer</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>