force-app/main/default/objects/Contact/fields/PropStrength__Total_Offer__c.field-meta.xml
<CustomField>
    <fullName>PropStrength__Total_Offer__c</fullName>
    <label>Total Offers</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>