force-app/main/default/objects/Contact/fields/PropStrength__Total_Offers_Closed_Won__c.field-meta.xml
<CustomField>
    <fullName>PropStrength__Total_Offers_Closed_Won__c</fullName>
    <label>Total Offers Closed Won</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>