force-app/main/default/objects/Contact/fields/PropStrength__Total_Offers_Closed_Won_Amount__c.field-meta.xml
<CustomField>
    <fullName>PropStrength__Total_Offers_Closed_Won_Amount__c</fullName>
    <label>Total Offers Closed Won Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>