force-app/main/default/objects/Contact/fields/PropStrength__Validate_PAN_Link__c.field-meta.xml
<CustomField>
    <fullName>PropStrength__Validate_PAN_Link__c</fullName>
    <defaultValue>&quot;https://incometaxindiaefiling.gov.in/e-Filing/Services/KnowYourJurisdictionLink.html&quot;</defaultValue>
    <label>Validate PAN (Link)</label>
    <type>Url</type>
</CustomField>