force-app/main/default/objects/Contact/fields/PropStrength__Wedding_Anniversary__c.field-meta.xml
<CustomField>
    <fullName>PropStrength__Wedding_Anniversary__c</fullName>
    <label>Wedding Anniversary</label>
    <type>Date</type>
</CustomField>