force-app/main/default/objects/Contact/fields/Registration_License_Details__c.field-meta.xml
<CustomField>
    <fullName>Registration_License_Details__c</fullName>
    <label>Registration License Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>