force-app/main/default/objects/Contact/fields/Relationshipof_SecondaryContact_withCust__c.field-meta.xml
<CustomField>
    <fullName>Relationshipof_SecondaryContact_withCust__c</fullName>
    <label>Relationshipof SecondaryContact withCust</label>
    <length>255</length>
    <type>Text</type>
</CustomField>