force-app/main/default/objects/Contact/fields/RERA_Registration_No__c.field-meta.xml
<CustomField>
    <fullName>RERA_Registration_No__c</fullName>
    <externalId>true</externalId>
    <label>RERA Registration No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>