force-app/main/default/objects/Contact/fields/Secondary_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Contact_Name__c</fullName>
    <label>Secondary Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>