force-app/main/default/objects/Contact/fields/SPA_Mailing_Address_Arabic_Merged__c.field-meta.xml
<CustomField>
    <fullName>SPA_Mailing_Address_Arabic_Merged__c</fullName>
    <description>TEXT(Mailing_Country_Arabic__c)	&amp; &quot;,&quot; &amp;  Mailing_Address_Arabic__c</description>
    <formula>TRIM(Mailing_Address_Arabic__c) + IF(NOT(ISPICKVAL(Mailing_City_Arabic__c,&apos;&apos;)),&apos;,&apos;,&apos;&apos;) + TRIM(TEXT(Mailing_City_Arabic__c)) + IF(NOT(ISPICKVAL(Mailing_State_Arabic__c,&apos;&apos;)),&apos;,&apos;,&apos;&apos;) + TRIM(TEXT(Mailing_State_Arabic__c)) + IF(NOT(ISPICKVAL(Mailing_Country_Arabic__c,&apos;&apos;)),&apos;,&apos;,&apos;&apos;) + TRIM(TEXT(Mailing_Country_Arabic__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SPA Mailing Address Arabic Merged</label>
    <type>Text</type>
</CustomField>