force-app/main/default/objects/Contact/fields/SPA_Mailing_Address_English_Merged__c.field-meta.xml
<CustomField>
    <fullName>SPA_Mailing_Address_English_Merged__c</fullName>
    <description>Mailing_Address__c &amp;&quot;,&quot;&amp; TEXT(Mailing_Country__c)</description>
    <formula>TRIM(Mailing_Address__c) + IF(NOT(ISPICKVAL(Mailing_City__c,&apos;&apos;)),&apos;,&apos;,&apos;&apos;) + TRIM(TEXT(Mailing_City__c)) + IF(NOT(ISPICKVAL(Mailing_State__c,&apos;&apos;)),&apos;,&apos;,&apos;&apos;) + TRIM(TEXT(Mailing_State__c)) + IF(NOT(ISPICKVAL(Mailing_Country__c,&apos;&apos;)),&apos;,&apos;,&apos;&apos;) + TRIM(TEXT(Mailing_Country__c)) + IF(NOT(ISNULL(Mailing_Pincode__c)),&apos;,&apos;,&apos;&apos;) + TRIM(TEXT(Mailing_Pincode__c))</formula>
    <label>SPA Mailing Address English Merged</label>
    <type>Text</type>
</CustomField>