force-app/main/default/objects/Contact/fields/Trade_License_Details__c.field-meta.xml
<CustomField>
    <fullName>Trade_License_Details__c</fullName>
    <label>Trade License Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>