force-app/main/default/objects/Contact/fields/Valid_Until_Passport__c.field-meta.xml
<CustomField>
    <fullName>Valid_Until_Passport__c</fullName>
    <label>Passport Copy Valid Upto</label>
    <type>Date</type>
</CustomField>