force-app/main/default/objects/Contact/fields/Valid_Upto_National_ID__c.field-meta.xml
<CustomField>
    <fullName>Valid_Upto_National_ID__c</fullName>
    <label>National ID Valid Upto</label>
    <type>Date</type>
</CustomField>