force-app/main/default/objects/Contact/fields/VCC1__Alternate_Email_Encrypted__c.field-meta.xml
<CustomField>
    <fullName>VCC1__Alternate_Email_Encrypted__c</fullName>
    <label>Alternate Email Encrypted</label>
    <type>Email</type>
</CustomField>