force-app/main/default/objects/Contact/fields/VCC1__Assigned_Agent__c.field-meta.xml
<CustomField>
    <fullName>VCC1__Assigned_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Agent</label>
    <referenceTo>VCC1__Agent__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>