force-app/main/default/objects/Contact/fields/VCC1__Assigned_Sales_Agent__c.field-meta.xml
<CustomField>
    <fullName>VCC1__Assigned_Sales_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Sales Agent</label>
    <referenceTo>VCC1__Agent__c</referenceTo>
    <relationshipLabel>Contacts (Assigned Sales Agent)</relationshipLabel>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>